Atualização das aulas html

--- a/Sprint 01/index.html
+++ b/Sprint 01/index.html
@@ -28,11 +28,8 @@
                 <div>
                     <p class="paragrafo-aviso">Apenas letras minúsculas e sem acento.</p>
 
-                    <button id="encode" class="buttonEncode"> 
-                        Criptografar
-                    </button>
-                    <button id="decode" class="buttonDecode"> 
-                        Descriptografar
+                    <button id="encode" class="buttonEncode">&#128274; Criptografar</button>
+                    <button id="decode" class="buttonDecode">&#128275; Descriptografar
                     </button>
                     
                 </div>
@@ -41,22 +38,17 @@
             <div class="retangulo1">
                 <div>Mensagem não encontrada</div>
                 <div>
-                    <button id="copia"  class="buttonCopia">
+                    <button id="copia"  class="buttonCopia">&#127279;
                         Copiar texto
                     </button>
                 </div>
             </div>
         </div>
-        <div class="linha2">
-            <div>
+        <footer>
                 <p class="criador">Criado por Júnior Medeiros</p>
-            </div>
-            <div>
                 <a href="https://www.linkedin.com/in/j%C3%BAnior-medeiros-a58072259/" target="_blank" class="criador">
                     <img src="Linkedin.png">
-                </a>
-            </div>
-        </div>
+        </footer>
         <script>
 
             var encodeButton = document.getElementById("encode");
