--- a/Html_e_CSS/Barbearia_Alura/index.html
+++ b/Html_e_CSS/Barbearia_Alura/index.html
@@ -5,11 +5,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Barbearia Alura</title>
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
     </head>
         <body>
             <header>
-                <h1 class="titulo-principal">Barbearia Alura</h1>
+                <div class="caixa">
+                    <h1><img src="logo.png"></h1>
+    
+                    <nav>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="produtos.html">Produtos</a></li>
+                            <li><a href="contato.html">Contato</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </header>
 
             <img id="banner" src="banner.jpg" alt="Barbearia">
@@ -22,7 +33,7 @@
                 <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
                 <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-        </div>
+            </div>
 
         <div class="beneficios">
             <h3 class="titulo-centralizado">Benefícios</h3>
@@ -36,5 +47,9 @@
             <img src="beneficios.jpg" class="imagembeneficios">
 
         </div>
+        <footer>
+            <img src="logo-branco.png">
+            <p class="copyright">&copy; Copyright Barbearia Alura 2015</p>
+        </footer>
     </body>
 </html>
