--- a/Html_e_CSS/Barbearia_Alura/produtos.html
+++ b/Html_e_CSS/Barbearia_Alura/produtos.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Produtos - Barbearia Alura</title>
         <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="produtos.css">
+        <link rel="stylesheet" href="style.css">
         
     </head>
 
@@ -14,7 +14,7 @@
 
         <header>
             <div class="caixa">
-                <h1><img src="logo.png"></h1>
+                <h1><img src="logo.png" alt="Logo da Barbearia Alura"></h1>
 
                 <nav>
                     <ul>
@@ -48,7 +48,7 @@
             </ul>
         </main>
         <footer>
-            <img src="logo-branco.png">
+            <img src="logo-branco.png" alt="Logo da Barbearia Alura">
             <p class="copyright">&copy; Copyright Barbearia Alura 2015</p>
         </footer>
     </body>
