Novvo CSS a caminho

--- a/Sprint 01/index.html
+++ b/Sprint 01/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="2style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
@@ -16,7 +17,6 @@
         <header class="cabecalho">
             <img src="vector.svg" alt="letra a" id="reset" title="Reset">
             <p class="criador">Criado por Júnior Medeiros</p>
-            <a href="https://www.linkedin.com/in/j%C3%BAnior-medeiros-a58072259/" target="_blank"><img class="criador-img" src="in.svg"></a>
         </header>
 
         <main class="conteudo">
@@ -37,7 +37,7 @@
 
             <section class="conteudo-direita">
                 <div class="caixa">
-                    <img class="img-direita" src="lupa.svg" id="lupa" style="display: block;" alt="">
+                    <img class="img-direita" src="lupa.svg" id="lupa" alt="">
                     <textarea id="resposta" class="resposta" placeholder="Nenhuma mensagem encontrada"></textarea>
                     <div class="botoes-direita">
                         <button id="copiar" style="display: none;" class="buttonCopiar">Copiar texto</button>
