Finalizando versão pessoal Sprint01

--- a/Sprint 01/index.html
+++ b/Sprint 01/index.html
@@ -15,8 +15,8 @@
 
     <body>
         <header class="cabecalho">
-            <img src="vector.svg" alt="letra a" id="reset" title="Reset">
-            <p class="criador">Criado por Júnior Medeiros</p>
+            <img src="vector.svg" alt="letra a" title="Site da Alura">
+            <p class="criador" id="reset" title="Clique para limpar os campos">Criado por Júnior Medeiros</p>
         </header>
 
         <main class="conteudo">
@@ -49,10 +49,11 @@
         </main>
 
         <footer class="rodape">
-            <img src="instagram.svg" alt="">
-            <img src="in.svg" alt="">
-            <img src="github.svg" alt="">
-            <img src="twitter.svg" alt="">
+            <a href="https://www.instagram.com/medeiros000/" target="_blank"><img src="instagram.svg" alt="instagram"></a>
+            <a href="https://www.linkedin.com/in/j%C3%BAnior-medeiros-a58072259/" target="_blank"><img src="linkedin.svg" alt="linkedin"></a>
+            <a href="https://github.com/Medeiros000" target="_blank"><img src="github.svg" alt="github"></a>
+            <a href="https://twitter.com/tHE_bISoM" target="_blank"><img src="twitter.svg" alt="twitter"></a>
+            
         </footer>
 
         <script src="codificador.js"></script>
