Consertando cabeçalho e posicionamento

--- a/Sprint 01/index.html
+++ b/Sprint 01/index.html
@@ -8,14 +8,14 @@
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-
+        <link rel="icon" type="image/svg" href="Vector.svg">
         <title>Decidificador de texto</title>
         
     </head>
 
     <body>
         <header class="cabecalho">
-            <img src="vector.svg" alt="letra a" title="Site da Alura">
+            <img id="reset" src="vector.svg" alt="letra a" title="Use para resetar">
         </header>
         
         <main class="conteudo">
